[tool.black]
line-length = 110
target-version = ["py39"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = false
use_parentheses = true
line_length = 110

[tool.poetry]
name = "backport-action"
version = "0.0.0"
description = "GitHub action for backporting all kind of pull request by adding a label."
authors = ["Camptocamp <info@camptocamp.com>"]
