[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
version = "0.0.0"

[project]
classifiers = []
dynamic = ["dependencies", "version"]
name = "backport-action"
description = "GitHub action for backporting all kind of pull request by adding a label."
authors = [{name = "Camptocamp",email = "info@camptocamp.com"}]
